--- a/modules/video_filter/Makefile.am
+++ b/modules/video_filter/Makefile.am
@@ -67,6 +67,10 @@ libvhs_plugin_la_SOURCES = video_filter/vhs.c
 libwave_plugin_la_SOURCES = video_filter/wave.c
 libwave_plugin_la_LIBADD = $(LIBM)
 
+libfacedetect_plugin_la_SOURCES = video_filter/facedetect.c
+libfacedetect_plugin_la_LIBADD = $(LIBM)
+libfacedetect_plugin_la_LDFLAGS = -ldl $(AM_LDFLAGS)
+
 video_filter_LTLIBRARIES = \
 	libadjust_plugin.la \
 	libalphamask_plugin.la \
@@ -105,7 +109,8 @@ video_filter_LTLIBRARIES = \
 	libfps_plugin.la \
 	libfreeze_plugin.la \
 	libpuzzle_plugin.la \
-	librotate_plugin.la
+	librotate_plugin.la \
+	libfacedetect_plugin.la
 
 # macOS / iOS hardware video filters
 libci_filters_plugin_la_SOURCES = video_filter/ci_filters.m codec/vt_utils.c codec/vt_utils.h
@@ -171,3 +176,4 @@ libopencv_example_plugin_la_LIBADD = $(OPENCV_LIBS)
 libopencv_example_plugin_la_LDFLAGS = $(AM_LDFLAGS) -rpath '$(video_filterdir)'
 video_filter_LTLIBRARIES += $(LTLIBopencv_example)
 EXTRA_LTLIBRARIES += libopencv_example_plugin.la
+
